# RediCraft

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-and-test.yml  code-quality.yml  release.yml
Guide/: API_REFERENCE.md  ARCHITECTURE.md  BENCHMARKING.md  DEVELOPER.md  README.md  SECURITY.md  TROUBLESHOOTING.md  USAGE.md
RediCraft-API/: README.md  pom.xml
RediCraft-API/src/main/java/com/redicraft/: ConnectionPool.java  RedicraftClient.java  RedicraftException.java  TestSetCommands.java
RediCraft-API/src/main/java/com/redicraft/minecraft/: AsyncMoneyPluginExample.java  MoneyCommandExample.java  MoneyPluginExample.java
RediCraft-API/src/main/resources/: checkstyle-suppressions.xml  checkstyle.xml
RediCraft-API/src/test/java/com/redicraft/: ConnectionPoolTest.java  IntegrationTest.java  RedicraftClientTest.java  SetCommandsTest.java
RediCraft-Server/: CMakeLists.txt  README.md  redicraft_cluster.conf  redicraft_slave.conf
RediCraft-Server/include/: cluster.h  config.h  parser.h  persistence.h  replication.h  server.h  session.h  storage.h
RediCraft-Server/src/: benchmark.cpp  cluster.cpp  config.cpp  main.cpp  parser.cpp  persistence.cpp  replication.cpp  server.cpp  session.cpp  storage.cpp
